--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,5 @@
 {
-	"title":"Kab. Pasuruan",
+	"title":"Disabilitas Jawa Timur",
 	"navbar_title":"Peta Sebaran Disabilitas",
-	"desc_info_modal":"Peta ini menunjukkan jumlah disabilitas di Kabupaten Pasuruan, Provinsi Jawa Timur.<br>Sumber Data: Data hasil survei tahun 2024."
+	"desc_info_modal":"Peta ini menunjukkan jumlah disabilitas Kabupaten/Kota di Provinsi Jawa Timur.<br><br>Sumber Data: Data hasil survei tahun 2024."
 }
