Add legend control, change default control layer to leaflet control layers tree

--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,5 @@
 {
 	"title":"Disabilitas Jawa Timur",
 	"navbar_title":"Peta Sebaran Disabilitas",
-	"desc_info_modal":"Peta ini menunjukkan jumlah disabilitas Kabupaten/Kota di Provinsi Jawa Timur.<br><br>Sumber Data: Data hasil survei tahun 2024."
+	"desc_info_modal":"<p>Peta ini menunjukkan jumlah disabilitas Kabupaten/Kota di Provinsi Jawa Timur.<br><br>Sumber Data: Data hasil survei tahun 2024.</p><p><img src='assets/images/logo.png' width='150'></p>"
 }
