--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,5 @@
 {
 	"title":"Disabilitas Jawa Timur",
 	"navbar_title":"Peta Sebaran Disabilitas",
-	"desc_info_modal":"<p>Peta ini menunjukkan jumlah disabilitas Kabupaten/Kota di Provinsi Jawa Timur.<br><br>Sumber Data: Data hasil survei tahun 2024.</p><p><img src='assets/images/logo.png' width='150'></p>"
+	"desc_info_modal":"<p>Peta ini menunjukkan jumlah disabilitas Kabupaten/Kota di Provinsi Jawa Timur.<br><br>Sumber Data: Data hasil kompilasi Data E-disabilitas dinas Sosial Provinsi Jawa Timur dan juga data yang dimiliki oleh Organisasi Penyandang DIsabilitas yang berada di Unit Layanan Disabilitas PB tahun 2024.</p><p><img src='assets/images/logo.png' width='150'></p>"
 }
